--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mogo</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mogo</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+    <!-- Header -->
+<header class="header">
+    <div class="container">
+        <div class="header_inner">
+            <div class="header_logo">MoGo</div>
+            
+            <nav>
+                <a class="nav_link" href="#">About</a>
+                <a class="nav_link" href="#">Service</a>
+                <a class="nav_link" href="#">Work</a>
+                <a class="nav_link" href="#">Blog</a>
+                <a class="nav_link" href="#">Contact</a>
+                <a class="nav_link" href="#">
+                    <img src="img/cart.png" alt="">
+                </a>
+                <a class="nav_link" href="#">
+                    <img src="img/glass.png" alt="">
+                </a>
+            </nav>
+
+        </div>
+    </div>
+</header>
+
+    <div class="intro">
+        <div class="container">
+            <div class="intro_inner"></div>
+        </div>
+    </div>
 </body>
 </html>
